// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should escape items in menu 1`] = `

<div class="v-list__tile__title">
  &lt;strong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should only show items if they are in items 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            foo
          </div>
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 2`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 3`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            bar
          </div>
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 4`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            foo,
          </div>
          <div class="v-select__selection v-select__selection--comma">
            bar
          </div>
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using v-list-tile in item scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when using v-list-tile in item scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div>
            <div class="v-list__tile theme--light">
              1
            </div>
          </div>
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should use scoped slot for selection generation 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div>
            foo - from slot
          </div>
          <input readonly="readonly"
                 type="text"
                 autocomplete="on"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should use slotted append-item 1`] = `

<div class="v-list theme--light">
  <div>
    <a class="v-list__tile v-list__tile--link theme--light">
      <div class="v-list__tile__content">
        <div class="v-list__tile__title">
          foo
        </div>
      </div>
    </a>
  </div>
  <div>
    foo
  </div>
</div>

`;

exports[`VSelect should use slotted no-data 1`] = `

<div class="v-list theme--light">
  <div>
    <a class="v-list__tile v-list__tile--link theme--light">
      <div class="v-list__tile__content">
        <div class="v-list__tile__title">
          foo
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`VSelect should use slotted prepend-item 1`] = `

<div class="v-list theme--light">
  <div>
    foo
  </div>
  <div>
    <a class="v-list__tile v-list__tile--link theme--light">
      <div class="v-list__tile__content">
        <div class="v-list__tile__title">
          foo
        </div>
      </div>
    </a>
  </div>
</div>

`;
